--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h3>IOS Apps</h3>
                         <p class="subtext">I have built various iOS apps using Swift and Objective-C, ranging from simple card games to menu apps. Currently, I am focused on developing a real-time 3D rendering app for styling clothes, showcasing my commitment to pushing the boundaries of app development and delivering innovative user experiences.</p>
                         <hr/>
-                        <p class="subtext2"><a class="Project-link" href="https://github.com/Astroid45">View here</a></p>
+                        <p class="subtext2"><a class="Project-link" href="https://github.com/Astroid45/Website-Portfolio">View here</a></p>
                     </div>
                 </div>
                 <div class="project-card">
